--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.45.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
