--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/t3-supabase-drizzle-
 NEXT_PUBLIC_SUPABASE_URL=supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=anon-key
 SUPABASE_SERVICE_KEY=service-key
+
+# Stripe
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
