--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "server-only": "^0.0.1",
+    "stripe": "^16.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
